[Sync] Deduping updates with the same server id

Some recent reports indicate that the Sync server might be sending
updates with duplicate sync ids. This is considered "invalid data",
and is so far not handled well by the client.

This CL adds the logic to remove updates with duplicate sync ids
(and keep only the latest)

In addition, it adds metrics to evaluate how common this is.

Existing logic for deduplication based on the client tag hashes already
existed. UMA metrics are also added to if deduplication based on
sync ids is sufficient or both deduplications are needed.

Bug: 893969, 893998

Change-Id: Ia7106623a47a3c6ddd12b452fbc4bdfa75c0fe44
Reviewed-on: https://chromium-review.googlesource.com/c/1270944
Reviewed-by: Robert Kaplow (sloooow) <rkaplow@chromium.org>
Reviewed-by: Marc Treib <treib@chromium.org>
Reviewed-by: Mikel Astiz <mastiz@chromium.org>
Commit-Queue: Mohamed Amir Yosef <mamir@chromium.org>
Cr-Commit-Position: refs/heads/master@{#598408}
Former-commit-id: ea43384275f737c991b4cfaa51fee4614faac159